(2001/08/27 - broeker) Add C++-style comments to {comment} pattern. Fixes
	               bug #455441: C++ comments in the middle of a function 
		       definition caused it not be recognized.
(2001/08/15 - broeker) Zero out 'disprefs' whenever the count of references, 
	               'totallines' is set to zero. This makes sure that you 
		       can't <Tab> into the selection area if there's nothing 
		       in it.
(2001/08/13 - jcduell) Revisited inverted index file name fixup routines.
                       (Patch #444669 from SourceForge).
(2001/08/03 - broeker) Use %option noyywrap in fscanner.l to avoid problems
	               with broken flex installations that can't find -lfl. 
(2001/07/12 - dixon)   Updated INSTALL with new configure info for HP-UX.
(2001/07/11 - broeker) Fixed #if syntax glitch in cohrs' SUNOS change.
(2001/07/09 - petrs)   Substituted lstat() for stat() to prevent core
                       dumps on looping symbolic references.
(2001/07/06 - broeker) Code dealing with database creation ripped out of
		       main.c and moved to a new module build.c. New
		       header file build.h to go with it.
(2001/07/05 - cohrs)   LEX and SUNOS fix for scanner.
(2001/07/05 - broeker) Put in lots of 'static' keywords, added prototypes.
(2001/07/05 - broeker) Renamed pclose() function to mypclose(), in order not to
	               cause a conflict with system function having the same
		       name.
(2001/07/05 - broeker) Centralisation of BSDism configuration stuff. Removal of
	               some remaining external prototypes from .c files, where
		       they should never be. Added multiple inclusion guards
		       to all headers. Ask for feature instead of testing a 
		       list of platform-#defines, wherever possible.
(2001/07/05 - broeker) Some post-last-minute DOS/DJGPP build fixes.
(2001/07/03 - petrs)   Updated the version strings to 16.0a.
(2001/07/02 - petrs)   Updated the contrib/README to include xcscope.